bootstrap working, jquery no

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Gabo Door Locker</title>
-	<link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.css' />
+	<link rel='stylesheet' href='/home/pi/myapp/bower_components/bootstrap/dist/css/bootstrap.css' />
 </head>
 <body>
 	<div class='container'>
@@ -13,17 +13,17 @@
 			<div class='panel-heading text-center'>Should be two buttons. Lock Button and Unlock Button.</div>
 			<div class='row panel-body'>
 				<div class='col-md-4 col-md-offset-4'>
-					<button  id='lock' class='btn btn-danger btn-lg btn-block'>LOCK</button>
+					<button  id='get-lock' class='btn btn-danger btn-lg btn-block'>LOCK</button>
 				</div>
 			</div>
 			<div class='row panel-body'>
 				<div class='col-md-4 col-md-offset-4'>
-					<button  id='unlock' class='btn btn-danger btn-lg btn-block'>UNLOCK</button>
+					<button  id='get-unlock' class='btn btn-danger btn-lg btn-block'>UNLOCK</button>
 				</div>
 			</div>
 		</div> <!-- end of panel panel-default -->
 	</div> <!-- end of container -->
-	<script src="/bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="/home/pi/myapp/bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="myclient.js"></script>
 </body>
 </html>
