--- a/index.html
+++ b/index.html
@@ -7,22 +7,26 @@
 <body>
 	<div class='container'>
 		<div class='jumbotron'>
-			<h1 class='text-center'>Gabo Door Locker</h1>
+			<h1 class='text-center'>Gabo Door Locker from 192.168.2.112:3000 </h1>
 		</div>
 		<div class='panel panel-default'>
 			<div class='panel-heading text-center'>Should be two buttons. Lock Button and Unlock Button.</div>
+<br>
 			<div class='row panel-body'>
 				<div class='col-md-4 col-md-offset-4'>
 					<button  id='get-lock' class='btn btn-danger btn-lg btn-block'>LOCK</button>
 				</div>
 			</div>
+<br>
 			<div class='row panel-body'>
 				<div class='col-md-4 col-md-offset-4'>
-					<button  id='get-unlock' class='btn btn-danger btn-lg btn-block'>UNLOCK</button>
+					<button  id='get-unlock' class='btn btn-success btn-lg btn-block'>UNLOCK</button>
 				</div>
 			</div>
 		</div> <!-- end of panel panel-default -->
 	</div> <!-- end of container -->
+
+	<!-- jQuery is loaded after you load customScript.js so the variable $ is undefined. You have to insert the script after you load jQuery. -->
 	<script src="/home/pi/myapp/bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="myclient.js"></script>
 </body>
