--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 			<div class='panel-heading text-center'>Should be two buttons. Lock Button and Unlock Button.</div>
 <br>
 			<div class='row panel-body'>
-				<div class='col-md-4 col-md-offset-4'>
+				<div class='col-md-4 offset-md-4'>
 					<button  id='get-lock' class='btn btn-danger btn-lg btn-block'>LOCK</button>
 				</div>
 			</div>
 <br>
 			<div class='row panel-body'>
-				<div class='col-md-4 col-md-offset-4'>
+				<div class='col-md-4 offset-md-4'>
 					<button  id='get-unlock' class='btn btn-success btn-lg btn-block'>UNLOCK</button>
 				</div>
 			</div>
