modified locked/unlocked state to match button/led

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class='container'>
 		<div class='jumbotron'>
-			<h1 class='text-center'>Gabo Door Locker from 192.168.2.112:3000 </h1>
+			<h1 class='text-center'>Gabo Door Locker</h1>
 		</div>
 		<div class='panel panel-default'>
 			<div class='panel-heading text-center'>Should be two buttons. Lock Button and Unlock Button.</div>
