added lock/unlock page and login button

--- a/doorlocker.html
+++ b/doorlocker.html
@@ -1,19 +1,26 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<title>Gabo Door Locker</title>
+	<title>LOCK THE DOOR</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
 </head>
 <body>
 	<div class='container'>
 		<div class='jumbotron'>
-			<h1 class='text-center'>Gabo Door Locker</h1>
+			<h1 class='text-center'>LOCK THE DOOR</h1>
 		</div>
 		<div class='panel panel-default'>
+			<div class='panel-heading text-center'>Should be two buttons. Lock Button and Unlock Button.</div>
+<br>
 			<div class='row panel-body'>
 				<div class='col-md-4 offset-md-4'>
-					<button  id='get-login' class='btn btn-primary btn-lg btn-block'>LOGIN</button>
+					<button  id='get-lock' class='btn btn-danger btn-lg btn-block'>LOCK</button>
+				</div>
+			</div>
+<br>
+			<div class='row panel-body'>
+				<div class='col-md-4 offset-md-4'>
+					<button  id='get-unlock' class='btn btn-success btn-lg btn-block'>UNLOCK</button>
 				</div>
 			</div>
 		</div> <!-- end of panel panel-default -->
