--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class='panel panel-default'>
 			<div class='row panel-body'>
 				<div class='col-md-4 offset-md-4'>
-					<button  id='get-login' class='btn btn-primary btn-lg btn-block'>LOGIN</button>
+					<button  onclick="location.href='http://localhost:3000/login'" class='btn btn-primary btn-lg btn-block'>LOGIN</button>
 				</div>
 			</div>
 		</div> <!-- end of panel panel-default -->
