connected to static IP set on router

--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
 		<div class='panel panel-default'>
 			<div class='row panel-body'>
 				<div class='col-md-4 offset-md-4'>
-					<button  onclick="location.href='http://localhost:3000/login'" class='btn btn-primary btn-lg btn-block'>LOGIN</button>
+					<button  onclick="location.href='http://192.168.2.102:3000/login'" class='btn btn-primary btn-lg btn-block'>LOGIN</button>
+				</div>
+			</div>
+<br>
+			<div class='row panel-body'>
+				<div class='col-md-4 offset-md-4'>
+					<button  id='get-lock' class='btn btn-danger btn-lg btn-block'>LOCK</button>
+				</div>
+			</div>
+<br>
+			<div class='row panel-body'>
+				<div class='col-md-4 offset-md-4'>
+					<button  id='get-unlock' class='btn btn-success btn-lg btn-block'>UNLOCK</button>
 				</div>
 			</div>
 		</div> <!-- end of panel panel-default -->
