added auto logout

--- a/index.html
+++ b/index.html
@@ -4,43 +4,44 @@
 	<title>Gabo Door Locker</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" /> -->
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 
 </head>
 <body>
 	<div id="index">
-	<div class='container'>
-		<div class='jumbotron'>
-			<h1 class='text-center'>Gabo Door Locker</h1>
-		</div>
-		<div class='panel panel-default'>
-			<div class='row panel-body'>
-				<div class='col-md-4 offset-md-4'>
-					<button  onclick="location.href='http://192.168.2.165:3000/login'" class='btn btn-primary btn-lg btn-block'>LOGIN</button>
-				</div>
+		<div class='container'>
+			<div class='jumbotron'>
+				<h1 class='text-center'>Gabo Door Locker</h1>
 			</div>
-<br>
-			<div class='row panel-body'>
-				<div class='col-md-4 offset-md-4'>
-					<button  id='get-lock' class='btn btn-danger btn-lg btn-block'>LOCK</button>
+			<div class='panel panel-default'>
+				<div class='row panel-body'>
+					<div class='col-md-4 offset-md-4'>
+						<button  onclick="location.href='http://192.168.2.165:3000/login'" class='btn btn-primary btn-lg btn-block'>LOGIN</button>
+					</div>
 				</div>
-			</div>
-<br>
-			<div class='row panel-body'>
-				<div class='col-md-4 offset-md-4'>
-					<button  id='get-unlock' class='btn btn-success btn-lg btn-block'>UNLOCK</button>
+	<br>
+				<div class='row panel-body'>
+					<div class='col-md-4 offset-md-4'>
+						<button  id='get-lock' class='btn btn-danger btn-lg btn-block'>LOCK</button>
+					</div>
 				</div>
-			</div>
-		</div> <!-- end of panel panel-default -->
-	</div> <!-- end of container -->
+	<br>
+				<div class='row panel-body'>
+					<div class='col-md-4 offset-md-4'>
+						<button  id='get-unlock' class='btn btn-success btn-lg btn-block'>UNLOCK</button>
+					</div>
+				</div>
+			</div> <!-- end of panel panel-default -->
+		</div> <!-- end of container -->
+	</div> <!-- end of index -->
 
 	<!-- jQuery is loaded after you load customScript.js so the variable $ is undefined. You have to insert the script after you load jQuery. -->
-	<!--
+	
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>  
- -->
-	 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+
+	<!-- <script src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous"></script>
+  crossorigin="anonymous"></script> -->
 <script src="https://code.jquery.com/mobile/1.5.0-alpha.1/jquery.mobile-1.5.0-alpha.1.min.js"></script>
 
 	<script src="myclient.js"></script>
